syntax = "proto3";


option go_package = "apisix-admin/proto/apisix/pb";

package apisix;

message RouteValue {
  string id = 1;
  int64  create_time = 2;
  repeated string remote_addrs = 3;
  int64 update_time = 4;
  string uri = 5;
  repeated string uris = 6;
  string  upstream_id = 7;
  string desc = 8;
  repeated string hosts = 9;
  repeated string methods = 10;
}

message RouteNodes {
  string key = 1;
  RouteValue value = 2;
}

message RouteNode {
  string key = 1;
  repeated  RouteNodes nodes = 2;
}

message ListRouteResp {
  string action = 1;
  int32  count = 2;
  RouteNode node = 3;
  string error_msg = 4;
}


message GetRouteResp{
  string action = 1;
  int32  count = 2;
  RouteNodes node = 3;
}

message CreateRouteReq {
  string id = 1;
  repeated string uris = 2;
  string uri = 3;
  repeated string hosts = 4;
  string name = 5;
  string desc = 6;
  repeated string remote_addrs = 7;
  string upstream_id = 8;
  repeated string  methods = 9;
}

message CreateRouteResp {
  string action = 1;
  RouteNode node = 2;
  string error_msg = 3;
}

message DeleteReq{
  string id = 1;
}

message DeleteResp {
  string deleted = 1;
  string key = 2;
  string action = 3;
  string error_msg = 4;
}

message UpstreamValue{
  string scheme = 1;
  string  type = 2;
  int64 update_time = 3;
  string pass_host = 4;
  map<string, int32> nodes = 5;
  string id = 6;
  int64 create_time = 7;
  string hash_on = 8;
  string desc = 9;
  string name = 10;
}

message UpstreamNodes{
  string key = 1;
  UpstreamValue value = 2;
}

message UpstreamNode{
  string  key = 1;
  repeated UpstreamNodes nodes = 2;
}

message ListReq {
  int32 page = 1;
  int32 size = 2;
}

message ListUpstreamResp {
  string  action = 1;
  UpstreamNode node = 2;
  int32 count = 3;
}

message CreateUpstreamReq {
  string id = 1;
  map<string, int32> nodes = 2;
  string name = 3;
  string desc = 4;
  string type = 5;
}

message CreateUpstreamResp{
  string action = 1;
  UpstreamNodes node = 2;
}

message GetUpstreamResp{
  string action = 1;
  int32  count = 2;
  UpstreamNodes node = 3;
}